# Sync-Service-Ui

./: CMakeLists.txt  README.md
src/: MainWindow.qml  helper.h  main.cpp  resources.qrc  sync_module.cpp  tcp_client.cpp  tcp_client.h
src/QObjects/: AddSyncModule.h  ErrorModal.h  MainWindow.h  SyncTable.h
src/qml/components/: ButtonLarge.qml  ButtonMed.qml  ButtonSmall.qml  CustomButton.qml  ImageButton.qml  MenuBar.qml  ProgressBar.qml  StatusBar.qml  SyncTable.qml  UtilBar.qml
src/qml/components/SyncTable/: ResizableRectangle.qml  SyncTable.qml
src/qml/screens/: AddSyncModule.qml  MainWindow.qml
src/sync_service/: SyncService.h
